--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <link rel="shortcut icon" href="./logo.png" />
+      <link rel="icon" href="./logo.png" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="manifest" href="./manifest.json" />
       <title>Tomato's Watchlist</title>
