--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,9 @@
   <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+      <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Tomato's Watchlist</title>
   </head>
